--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@angular/common": "~12.0.4",
     "@angular/compiler": "~12.0.4",
     "@angular/core": "~12.0.4",
+    "@angular/fire": "^6.1.5",
     "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.0.4",
     "@angular/material": "^12.0.4",
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "firebase": "^8.6.7",
     "highcharts-angular": "^2.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
